--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -86,7 +86,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery-1.9.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-tokenfield.js"></script>
     <script src="js/index.js"></script>
