--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -36,46 +36,40 @@
 
 		<img src="images/pt_logo.png"/>
         
-        <div class="bs-example bs-example-tabs" data-example-id="togglable-tabs">
+        <div id="tab-menu">
 	    <ul id="myTabs" class="nav nav-tabs" role="tablist">
-	      <li role="presentation" class="active"><a class="a-tab" href="#" id="data-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">Data Entry</a></li>
-	      <li role="presentation" class="disabled"><a class="a-tab" role="tab" id="resources-tab" data-toggle="tab" aria-controls="profile">Resources</a></li>
-	      <li role="presentation" class="disabled"><a class="a-tab" role="tab" id="trend-tab" data-toggle="tab" aria-controls="profile">Trend analysis</a></li>
+	      <li role="presentation" class="active"><a class="a-tab" href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">Data Entry</a></li>
+	      <li role="presentation" class="disabled"><a class="a-tab" href="#resources" id="resources-tab" role="tab" data-toggle="tab" aria-controls="resources">Resources</a></li>
+	      <li role="presentation" class="disabled"><a class="a-tab" href="#trend" id="trend-tab" role="tab" data-toggle="tab" aria-controls="trend">Trend analysis</a></li>
 	    </ul>
 	    <div id="myTabContent" class="tab-content">
-	      <div role="tabpanel" class="tab-pane fade in active container-fluid" id="home" aria-labelledBy="home-tab">
-	      <div class="col-md-6 extra-padded" style="border-right:1px solid lightgrey;">
-	        <h2>1. Enter research metadata:</h2>
+	      <div role="tabpanel" class="tab-pane fade in active" id="home" aria-labelledBy="home-tab">
+	      <div class="col-md-12 extra-padded">
+	        <h2>Enter research metadata and abstract:</h2>
 	        <form id="metadata-form">
 			  <div class="form-group">
 			    <p>Title</p>
-			    <textarea id="title" name="title" class="form-control my-form" rows="1"></textarea>
+			    <textarea id="title" name="title" class="form-control" style="width:50%;" rows="1"></textarea>
 			    <p>Comma-separated keywords</p>
-			    <textarea id="keywords" name="keywords" class="form-control my-form" rows="1"></textarea>
+			    <textarea id="keywords" name="keywords" class="form-control" style="width:50%;"rows="1"></textarea>
 			    <p>Abstract (enter or upload)</p>
 			    <textarea id="summary" name="summary" class="form-control my-form" rows="10"></textarea>
 			  </div>
 			  <button type="button" id="metadata-submit" class="btn btn-default">Submit</button>
-			  <span class="btn btn-default glyphicon glyphicon-upload" id="upload"> Upload</span>
+			  <span class="btn btn-default glyphicon glyphicon-upload" id="upload"></span>
 			  <input id="files" type="file" style="display:none;">
 			</form>
 		  </div>
-		  <div class="col-md-6 extra-padded">
-		    <h2>2. Confirm text analysis:</h2>
-		    <form id="analysis-from" >
-			  <div class="form-group">
-			    <p>Objective</p>
-			    <textarea id="objective" class="form-control my-form" rows="4" disabled=true></textarea>
-			    <p>Methods</p>
-			    <textarea id="methods" class="form-control my-form" rows="4" disabled=true></textarea>
-			    <p>Topics</p>
-			    <textarea id="topics" class="form-control my-form" rows="4" disabled=true></textarea>
-			  </div>
-			  <button type="submit" id="confirm" class="btn btn-default" disabled=true>Confirm</button>
-			</form>
-		  </div>
 	      </div>
-	      <div role="tabpanel" class="tab-pane fade" id="profile" aria-labelledBy="profile-tab">
+	      <div role="tabpanel" class="tab-pane fade" id="resources" aria-labelledBy="resources-tab">
+	      	<div class="col-md-12 extra-padded"><h2>PaperTrail Resource Recommendations</h2></div>
+		  </div>
+		  <div role="tabpanel" class="tab-pane fade" id="trend" aria-labelledBy="trend-tab">
+		  	<div class="col-md-12 extra-padded">
+		  		<h2>Trend Analysis</h2>
+		  		<div id="trend-analysis" class="panel-group">
+		  		</div>
+		  	</div>
 		  </div>
 	    </div>
 	  </div><!-- /example -->
@@ -86,9 +80,10 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery-1.9.1.js"></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-tokenfield.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
