--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -68,6 +68,14 @@
 		  	<div class="col-md-12 extra-padded">
 		  		<h2>Trend Analysis</h2>
 		  		<div id="trend-analysis" class="panel-group">
+		  			<div class="panel panel-default"><div class="panel-heading">
+						<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#trend-analysis" href="#collapse1">
+						<b>Top Keyword Web Search Trends</b></a></h4></div>
+						<div id="collapse1" class="panel-collapse collapse">
+							<iframe width="600" height="320" src="trend.html" style="border: none;"></iframe>
+						</div>
+				    </div>
 		  		</div>
 		  	</div>
 		  </div>
