Trend analysis component

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -61,27 +61,12 @@
 			</form>
 		  </div>
 	      </div>
-	      <div role="tabpanel" class="tab-pane fade" id="resources" aria-labelledBy="resources-tab">
-	      	<div class="col-md-12 extra-padded"><h2>PaperTrail Resource Recommendations</h2></div>
-		  </div>
-		  <div role="tabpanel" class="tab-pane fade" id="trend" aria-labelledBy="trend-tab">
-		  	<div class="col-md-12 extra-padded">
-		  		<h2>Trend Analysis</h2>
-		  		<div id="trend-analysis" class="panel-group">
-		  			<div class="panel panel-default"><div class="panel-heading">
-						<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#trend-analysis" href="#collapse1">
-						<b>Top Keyword Web Search Trends</b></a></h4></div>
-						<div id="collapse1" class="panel-collapse collapse">
-							<iframe width="600" height="320" src="trend.html" style="border: none;"></iframe>
-						</div>
-				    </div>
-		  		</div>
-		  	</div>
-		  </div>
+	      <div role="tabpanel" class="tab-pane fade" id="resources" aria-labelledBy="resources-tab"></div>
+		  <div role="tabpanel" class="tab-pane fade" id="trend" aria-labelledBy="trend-tab"></div>
 	    </div>
 	  </div><!-- /example -->
 
+	<footer>Text Analysis by <a href="www.alchemyapi.com">AlchemyAPI</a></footer>
     </div><!-- /.container -->
 
 
