with fake recommendations

--- a/WebContent/analysis.html
+++ b/WebContent/analysis.html
@@ -62,7 +62,10 @@
 		  </div>
 	      </div>
 	      <div role="tabpanel" class="tab-pane fade" id="resources" aria-labelledBy="resources-tab">
-	      	<div class="col-md-12 extra-padded"><h2>PaperTrail Resource Recommendations</h2></div>
+	      	<div id="citation-analysis" class="col-md-12 extra-padded">
+	      		<h2>PaperTrail Resource Recommendations</h2>
+	      		<hr>
+	      	</div>
 		  </div>
 		  <div role="tabpanel" class="tab-pane fade in active" id="trend" aria-labelledBy="trend-tab">
 		  	<div class="col-md-12 extra-padded">
