--- a/WebContent/analysis.html
+++ b/WebContent/analysis.html
@@ -55,8 +55,7 @@
 			    <p>Abstract (enter or upload)</p>
 			    <textarea id="summary" name="summary" class="form-control my-form" rows="10"></textarea>
 			  </div>
-			  <button type="button" id="metadata-submit" class="btn btn-default">Submit</button>
-			  <span class="btn btn-default glyphicon glyphicon-upload" id="upload"></span>
+			  <a href="/index.html" class="btn btn-info" role="button">New Entry</a>
 			  <input id="files" type="file" style="display:none;">
 			</form>
 		  </div>
